--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 *.pyc
+.ipynb_checkpoints/ML For Contoured CT Images v3-checkpoint.ipynb
+.ipynb_checkpoints/ML For Contoured CT Images v3-checkpoint.ipynb
+*.pyc
+*.pyc
+*.png
+Diagrams.ipynb
