refactor to meet python scripting standards

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 
 *.pyc
 .ipynb_checkpoints/ML For Contoured CT Images v3-checkpoint.ipynb
-.ipynb_checkpoints/ML For Contoured CT Images v3-checkpoint.ipynb
-*.pyc
-*.pyc
 *.png
 Legacy scripts/Diagrams.ipynb
+/target/
+/test_data/
